flux/registry.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: registry
  namespace: flux-system
spec:
  selector:
    matchLabels:
      app: registry
  serviceName: "registry2"
  replicas: 1
  template:
    metadata:
      labels:
        app: registry
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: registry
        image: registry:2
        ports:
        - containerPort: 5000
          protocol: TCP
          name: web
        volumeMounts:
        - name: htpasswd
          mountPath: "/auth"
          readOnly: true
        - name: image-volume
          mountPath: "/var/lib/registry/docker"
        securityContext:
          runAsUser: 1000
          runAsGroup: 3000
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          runAsNonRoot: true
          seccompProfile:
            type: "RuntimeDefault"
      volumes:
      - name: htpasswd
        secret:
          secretName: registry-basicauth
      - name: image-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: flux-system
  labels:
    app: registry
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: registry
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: flux-system
  labels:
    app: registry
spec:
  rules:
    - host: flux.blechschmidt.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 80
---
# This is necessary because Flux disallows
# everything in the namespace by default.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-registry
  namespace: flux-system
  labels:
    app: registry
spec:
  ingress:
  - from:
    - namespaceSelector: {}
  podSelector:
    matchLabels:
      app: registry
  policyTypes:
  - Ingress
